--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>just-admin-vue</title>
+    <title>vue-admin-ui</title>
+    <link rel="stylesheet" href="./static/font-awesome.css">
   </head>
   <body>
     <div id="app"></div>
